less/gluon/account.less
//
// Account : login and signup
// --------------------------------------------------


.navbar-account-wrapper {
    .navbar-brand {
        width: auto;

        img {
            height: @navbar-brand-img-height;
            display: inline-block;
        }
    }

    .navbar-title {
        float: right;
    }

    &.navbar-fixed-top + .container {
        padding-top: @navbar-height + @navbar-margin-bottom + 1;
    }
}

.account-wrapper {
    margin-top: 50px;

    .logo-wrapper {
        padding-bottom: 41px;
        text-align: center;

        > img {
            height: @account-logo-height;
        }
    }

    .account-links {
        margin-top: -round(@form-group-margin-bottom / 2);

        .checkbox {
            margin: 0;
            padding: 0;
            display: inline-block;
        }

        .help {
            line-height: @input-radio-checkbox-size + 2;
            color: lighten(@gray-light, 25%);
        }
    }

    .buttons {
        margin-top: @form-group-margin-bottom * 2;
    }

    .footer-link {
        text-align: center;
        padding: 10px 0;
        display: block;
        width: 100%;
    }

    .text-muted {
        text-align: left;
        font-size: floor(@font-size-base * 0.9);
        color: lighten(@gray-light, 20%);
    }
}

